# cargoro

./: .codecov.yml  .editorconfig  .env.example  .eslintrc.json  .gitignore  .lintstagedrc.js  .npmrc  .prettierrc.json  ANALYTICS_IMPLEMENTATION.md  BUILD_AND_RUN.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT_REPORT.md  DOCKER.md  NEXT-STEPS.md  PAYMENT_IMPLEMENTATION.md  PROJECT_SUMMARY.md  README.md  REALTIME_IMPLEMENTATION.md  RENTAL_LEASE_SYSTEM_OVERVIEW.md  SECURITY.md  clean-cache.sh  commit-auth.sh  commit-delivery-driver.sh  commit-index-fix.sh  commit-mobile.sh  commit-smart-car.sh  commit.sh  commitlint.config.js  docker-compose.yml  fix-rental-store.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  run.sh  start_all_frontends.sh  stop_all_frontends.sh  test-phone.js  tsconfig.base.json  (+5 more)
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README-CI-CD.md  dependabot.yml
.husky/: commit-msg  pre-commit
backend/: .coveragerc  README.md  __init__.py  mypy.ini  package.json  pytest.ini  requirements-test.txt  requirements.txt  setup.py  start_all_services.sh  stop_all_services.sh
backend/services/admin_api/: Dockerfile  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  setup.sh  start.sh
backend/services/admin_api/lib/: __init__.py  database.py  server.py
backend/services/admin_api/lib/routes/: __init__.py  audit.py
backend/services/admin_api/lib/services/: __init__.py
backend/services/admin_api/lib/utils/: response_utils.py
config/: README.md
docs/: backend-test-environment-improvement-report.md  (+16 more)
(+1392 files in other folders)
