[tool.poetry]
name = "admin-api"
version = "1.0.0"
description = "시스템 관리를 위한 Admin API 서비스"
authors = ["CarGoro Team <dev@cargoro.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.0"
prisma = "^0.15.0"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
httpx = "^0.27.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
black = "^24.4.0"
isort = "^5.13.2"

[tool.prisma]
# Prisma 클라이언트 설정
schema_path = "../../../backend/database/prisma/schema.prisma"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
